Backend files added

--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -83,7 +83,7 @@
 
      <input type="submit" class="btn btn-dark btn-lg" value="PUBLISH" />
   </form>
-        <a href="#">Back to Home Page <i class="fas fa-arrow-right"></i></a>
+        <a href="/user/{{ id }}">Back to Home Page <i class="fas fa-arrow-right"></i></a>
       </div>
 
   </body>
