--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -144,7 +144,7 @@
           </div>
           
           <div class="form-field col-lg-12 home-btn">
-            <a href="#">Back to Home </a>
+            <a href="/user/{{ id }}">Back to Home </a>
           </div>
           
         </div>
