--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -57,14 +57,14 @@
                         <li><a href = "{% url 'achievements' %}">International Affairs</a></li>
                         <li><a href = "{% url 'cultural' %}">Cultural Insights</a></li>
                         <li><a href = "{% url 'sports' %}">Sports Insights</a></li>
-                        <li><a href = "{% url 'achievements' %}">Achievements</a></li>
-                        <li><a href = "{% url 'interview' %}">Small Talk With Gems</a></li>
                         <li><a href = "{% url 'cc' %}">Cultural Classicists</a></li>
+                        <li><a href = "{% url 'interview' %}">Small Talk With Gems</a></li>
                         <li><a href = "{% url 'youth' %}">Youth</a></li>
                         <li><a href = "{% url 'district' %}">District Insights</a></li>
-                        <li><a href = "{% url 'comics' %}">Comics</a></li>
+                        <li><a href = "{% url 'achievements' %}">Achievements</a></li>
                         <li><a href = "{% url 'trending' %}">Trending</a></li>
                         <li><a href = "{% url 'diversed' %}">Diversed</a></li>
+                        <li><a href = "{% url 'comics' %}">Comics</a></li>
                     </ul>
                 </nav>
             </div>
@@ -98,7 +98,7 @@
      <footer>
       <div class="footer-container">
         <div class="footer-left">
-          <h2>Cultural Classicists</h2>
+          <h2>The Cultural Classicists</h2>
           <p>
             News portal for Cultural Classicists
           </p>
