--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -33,7 +33,7 @@
               <div class="image">
                 <img src="{% static 'images/newslogo.png' %}" alt="">
               </div>
-              <p>Sunday, 14 July, 2021</p>
+              <p>{{ time }}</p>
             </div>
           </div>
 
