--- a/Classicist Express/userID/templates/user.html
+++ b/Classicist Express/userID/templates/user.html
@@ -30,7 +30,7 @@
       <div class="tab-container">
         <div class="button-container">
           <button onclick="showPanel(0)" class="btn">
-            <i class="far fa-bell"></i>Notifications
+            <i class="far fa-bell"></i>Tasks
           </button>
 
           <button onclick="showPanel(1)" class="btn">
