Ready for production

--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -91,7 +91,7 @@
     <div class="news">
       <section class="main-container-left">
         <h2>News</h2>
-        <div class="container-bottom-left">
+        <div class="container-bottom-left" id="bottom">
         </div>
       </section>
     </div>
