--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -71,16 +71,19 @@ a {
     display: none;
   }
 
-  .button-container button {
+  .button-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     background: transparent;
+  }
+
+  .button-container button {
+    background-color: transparent;
     border: none;
-    color: #fff;
-    font-size: 20px;
-    display: block;
+    display: flex;
+    margin-bottom: 20px;
   }
 
   input {
@@ -106,7 +109,7 @@ a {
     }
   }
 
-  a {
+  .btn-name {
     color: #fff;
     font-size: 20px;
     display: block;
@@ -114,7 +117,7 @@ a {
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 802px) {
   .container {
     display: flex;
     justify-content: flex-start;
@@ -151,7 +154,7 @@ a {
   }
 
   .button-container button {
-    padding: 15px 15px;
+    padding: 15px;
     margin-right: 15px;
     background: transparent;
     border: none;
@@ -209,10 +212,11 @@ a {
   .view-btn,
   .delete-btn {
     padding: 10px 20px;
-    margin: 10px 20 10px 0;
+    margin: 10px 20px 10px 0;
     font-size: 14px;
     border: none;
     border-radius: 2px;
+    display: block;
   }
 
   .view-btn {
@@ -230,14 +234,11 @@ a {
     opacity: 0.8;
   }
 
-  .tab-panel {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: flex-end;
+  .side-buttons {
+    float: right;
   }
 
-  @media (max-width: 961px) {
+  @media (max-width: 1286px) {
     .profile-img {
       height: 200px;
       width: 200px;
@@ -248,5 +249,42 @@ a {
     .button-container form input {
       font-size: 13px;
     }
+
+    @media (max-width: 1121px) {
+      .button-container button {
+        padding: 5px;
+        margin-right: 5px;
+      }
+    }
+  }
+
+  .user-details {
+    display: none;
+  }
+  /**/
+  .toggle {
+    display: block;
+  }
+
+  .user-img {
+    height: 70px;
+    width: 70px;
+    margin: 20px;
+  }
+
+  .user-img img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .user-info div {
+    margin-bottom: 15px;
+  }
+
+  .user-info p {
+    font-size: 14px;
+    line-height: 1.3;
   }
 }
