--- a/Classicist Express/userID/templates/user.html
+++ b/Classicist Express/userID/templates/user.html
@@ -93,9 +93,9 @@
             <button type="button" class="view-btn" id="view" onclick="toggle()">
               <a href="#">View</a>
             </button>
-            <form action="{{ acc_url }}" method="post">{% csrf_token %}
+            <form action="{{ acc_url }}#" method="post">{% csrf_token %}
               <input type="hidden" name="_method" value="user" />
-              <input type="hidden" name="_content" value="{{ content.id }}" />
+              <input type="hidden" name="_content" value="{{ user.accessID }}" />
               <input type="submit" class="delete-btn" value="Delete" />
             </form>
           </div>
@@ -114,7 +114,7 @@
               </div>
             </div>
           </div>
-        </div>
+         </div>
         {% endif %}
         {% endfor %}
         {% endif %}
