--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -62,11 +62,6 @@ a {
     margin-right: 20px;
   }
 
-  .tab-container {
-    background-color: #17181b;
-    padding: 30px 20px;
-  }
-
   .tab-panel {
     display: none;
   }
@@ -77,6 +72,8 @@ a {
     justify-content: flex-start;
     align-items: flex-start;
     background: transparent;
+    background-color: #17181b;
+    padding: 30px 20px;
   }
 
   .button-container button {
@@ -114,6 +111,93 @@ a {
     font-size: 20px;
     display: block;
     margin-bottom: 20px;
+  }
+
+  .view-btn,
+  .delete-btn {
+    padding: 10px 20px;
+    margin: 5px 20px 10px 0;
+    font-size: 14px;
+    border: none;
+    border-radius: 2px;
+  }
+
+  .view-btn {
+    background-color: #ffca2b;
+    color: #000;
+    margin-top: 45px;
+    position: fixed;
+    top: 72%;
+    right: 0;
+  }
+
+  .delete-btn {
+    background-color: #bb2d3a;
+    color: #fff;
+    position: fixed;
+    top: 70%;
+    right: 0;
+    margin-top: 15px;
+  }
+
+  .view-btn:hover,
+  .delete-btn:hover {
+    opacity: 0.8;
+  }
+
+  .side-buttons {
+    float: right;
+  }
+
+  .user-details {
+    display: none;
+    color: #fff;
+    margin: 30px 20px;
+  }
+
+  .single-user {
+    border: 0.1px solid #ccc;
+    padding: 20px;
+    background-color: #17181b;
+    margin: 15px 0;
+    max-height: 64px;
+    overflow: hidden;
+    transition: all 0.3s ease;
+  }
+
+  .single-user.expand {
+    max-height: 300px;
+  }
+
+  .heading {
+    cursor: pointer;
+  }
+
+  /**/
+  .toggle {
+    display: block;
+  }
+
+  .user-img {
+    height: 70px;
+    width: 70px;
+    margin: 20px;
+  }
+
+  .user-img img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .user-info div {
+    margin-bottom: 15px;
+  }
+
+  .user-info p {
+    font-size: 14px;
+    line-height: 1.3;
   }
 }
 
@@ -222,11 +306,17 @@ a {
   .view-btn {
     background-color: #ffca2b;
     color: #000;
+    position: fixed;
+    top: 30%;
+    right: 5%;
   }
 
   .delete-btn {
     background-color: #bb2d3a;
     color: #fff;
+    position: fixed;
+    top: 36%;
+    right: 5%;
   }
 
   .view-btn:hover,
@@ -260,6 +350,25 @@ a {
 
   .user-details {
     display: none;
+  }
+
+  .single-user {
+    width: 50%;
+    border: 0.1px solid #ccc;
+    padding: 20px;
+    background-color: #17181b;
+    margin: 30px 0;
+    max-height: 64px;
+    overflow: hidden;
+    transition: all 0.3s ease;
+  }
+
+  .single-user.expand {
+    max-height: 300px;
+  }
+
+  .heading {
+    cursor: pointer;
   }
   /**/
   .toggle {
