--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -131,7 +131,7 @@
           </div>
           
           <div class="col-lg-12 form-field">
-            <div class="input-div">
+            <div class="input-div add-image">
               <div>
                 <input type="file" name="image" id="file" />
                 <label for="file" id="selector" class="upload"><i class="fas fa-upload"></i> Add Your Image</label>
