--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -144,13 +144,41 @@ a {
   .delete-btn:hover {
     opacity: 0.8;
   }
+  .view:hover,
+  .delete:hover {
+    opacity: 0.8;
+  }
+
+  .view,
+  .delete {
+    padding: 10px 20px;
+    margin: 10px 20px 10px 0;
+    font-size: 14px;
+    border: none;
+    border-radius: 2px;
+    position: relative;
+    top: -40px;
+    right: -40px;
+  }
+
+  .view {
+    background-color: #ffca2b;
+    color: #000;
+  }
+
+  .delete {
+    background-color: #bb2d3a;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 4px;
+    right: -31px;
+  }
 
   .side-buttons {
     float: right;
   }
 
   .user-details {
-    display: none;
     color: #fff;
     margin: 30px 20px;
   }
@@ -167,10 +195,6 @@ a {
 
   .single-user.expand {
     max-height: 300px;
-  }
-
-  .heading {
-    cursor: pointer;
   }
 
   /**/
@@ -317,6 +341,7 @@ a {
     position: fixed;
     top: 36%;
     right: 5%;
+    cursor: pointer;
   }
 
   .view-btn:hover,
@@ -326,6 +351,33 @@ a {
 
   .side-buttons {
     float: right;
+  }
+
+  .view,
+  .delete {
+    padding: 10px 20px;
+    margin: 10px 20px 10px 0;
+    font-size: 14px;
+    border: none;
+    border-radius: 2px;
+    position: relative;
+    top: -40px;
+  }
+
+  .view:hover,
+  .delete:hover {
+    opacity: 0.8;
+  }
+
+  .view {
+    background-color: #ffca2b;
+    color: #000;
+  }
+
+  .delete {
+    background-color: #bb2d3a;
+    color: #fff;
+    cursor: pointer;
   }
 
   @media (max-width: 1286px) {
@@ -348,12 +400,8 @@ a {
     }
   }
 
-  .user-details {
-    display: none;
-  }
-
   .single-user {
-    width: 50%;
+    width: 500px;
     border: 0.1px solid #ccc;
     padding: 20px;
     background-color: #17181b;
@@ -367,9 +415,6 @@ a {
     max-height: 300px;
   }
 
-  .heading {
-    cursor: pointer;
-  }
   /**/
   .toggle {
     display: block;
