--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -126,7 +126,6 @@ a {
     background-color: #ffca2b;
     color: #000;
     margin-top: 45px;
-    position: fixed;
     top: 72%;
     right: 0;
   }
@@ -134,7 +133,6 @@ a {
   .delete-btn {
     background-color: #bb2d3a;
     color: #fff;
-    position: fixed;
     top: 70%;
     right: 0;
     margin-top: 15px;
@@ -145,12 +143,15 @@ a {
     opacity: 0.8;
   }
   .view:hover,
-  .delete:hover {
+  .delete:hover,
+  .tasks-view {
     opacity: 0.8;
   }
 
   .view,
-  .delete {
+  .delete,
+  .tasks-view,
+  .approve {
     padding: 10px 20px;
     margin: 10px 20px 10px 0;
     font-size: 14px;
@@ -161,7 +162,8 @@ a {
     right: -40px;
   }
 
-  .view {
+  .view,
+  .tasks-view {
     background-color: #ffca2b;
     color: #000;
   }
@@ -173,7 +175,27 @@ a {
     margin-top: 4px;
     right: -31px;
   }
+  .approve {
+    background-color: green;
+    color: #fff;
+    cursor: pointer;
+  }
 
+  .tasks {
+    min-height: 170px;
+  }
+
+  .tasks .side-buttons {
+    display: flex;
+  }
+
+  .tasks .side-buttons .delete {
+    margin-top: 10px;
+  }
+
+  .tasks .heading h3 {
+    margin-bottom: 45px;
+  }
   .side-buttons {
     float: right;
   }
@@ -183,7 +205,8 @@ a {
     margin: 30px 20px;
   }
 
-  .single-user {
+  .single-user,
+  .tasks {
     border: 0.1px solid #ccc;
     padding: 20px;
     background-color: #17181b;
@@ -191,6 +214,7 @@ a {
     max-height: 64px;
     overflow: hidden;
     transition: all 0.3s ease;
+    color: #fff;
   }
 
   .single-user.expand {
@@ -354,7 +378,9 @@ a {
   }
 
   .view,
-  .delete {
+  .delete,
+  .approve,
+  .tasks-view {
     padding: 10px 20px;
     margin: 10px 20px 10px 0;
     font-size: 14px;
@@ -365,11 +391,14 @@ a {
   }
 
   .view:hover,
-  .delete:hover {
+  .delete:hover,
+  .approve:hover,
+  .tasks-view:hover {
     opacity: 0.8;
   }
 
-  .view {
+  .view,
+  .tasks-view {
     background-color: #ffca2b;
     color: #000;
   }
@@ -378,6 +407,20 @@ a {
     background-color: #bb2d3a;
     color: #fff;
     cursor: pointer;
+  }
+
+  .approve {
+    background-color: green;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .tasks {
+    min-height: 150px;
+  }
+
+  .tasks .heading h3 {
+    margin-bottom: 45px;
   }
 
   @media (max-width: 1286px) {
@@ -400,7 +443,8 @@ a {
     }
   }
 
-  .single-user {
+  .single-user,
+  .tasks {
     width: 500px;
     border: 0.1px solid #ccc;
     padding: 20px;
