temporary link btn added

--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -145,6 +145,7 @@
           
           <div class="form-field col-lg-12 home-btn">
             <a href="/user/{{ id }}">Back to Home </a>
+            <a href="#">Get a temporary link </a>
           </div>
           
         </div>
