--- a/Classicist Express/registration/static/registration.css
+++ b/Classicist Express/registration/static/registration.css
@@ -214,9 +214,10 @@ a {
   border-radius: 2px;
   padding: 15px 50px;
   color: #d6ae67;
+  margin-left: 10px;
 }
 
-a::after {
+.home-link::after {
   content: "»";
   position: absolute;
 
@@ -237,4 +238,15 @@ a:hover:after {
 
 .home-btn {
   margin-top: 20px;
+}
+
+@media (max-width: 534px) {
+  .home-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  a {
+    margin-bottom: 10px;
+  }
 }
