approve btn added

--- a/Classicist Express/userID/templates/user.html
+++ b/Classicist Express/userID/templates/user.html
@@ -134,6 +134,7 @@
                       value="{{ user.accessID }}"
                     />
                     <input type="submit" class="delete" value="Delete" />
+                    <input type="submit" class="approve" value="Approve" />
                   </form>
                 </div>
               </div>
