--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -168,17 +168,23 @@ a {
     color: #000;
   }
 
+  .view {
+    right: -130px;
+  }
+
   .delete {
     background-color: #bb2d3a;
     color: #fff;
     cursor: pointer;
     margin-top: 4px;
-    right: -31px;
+    right: -130px;
   }
   .approve {
     background-color: green;
     color: #fff;
     cursor: pointer;
+    top: 15px;
+    left: 25px;
   }
 
   .tasks {
@@ -382,7 +388,7 @@ a {
   .approve,
   .tasks-view {
     padding: 10px 20px;
-    margin: 10px 20px 10px 0;
+    margin: 10px 10px 10px 0;
     font-size: 14px;
     border: none;
     border-radius: 2px;
