Bold italic backend done

--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -77,9 +77,8 @@
         </div>
           
         <div class="content">
-          <p>
-              {{ NEWS }}
-          </p>
+          <input type='hidden' id='inside' value='{{ NEWS }}' >
+          <p id='p-news'></p>
         </div>
           
          <!-- comment-box -->
