--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="{% static 'images/logo.png' %}">
+    <link rel="icon" href="{% static 'images/logo.png' %}" />
     <title>Registration</title>
     <link
       rel="stylesheet"
@@ -13,7 +13,13 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="{% static 'registration.css' %}" />
   </head>
   <body>
@@ -24,12 +30,18 @@
 
       <h1 class="title">Content Writer And Admin Registration</h1>
 
-      <form action="{% url 'registration' %}" id="form" method="POST" class="container" enctype="multipart/form-data">{% csrf_token %}
+      <form
+        action="{% url 'registration' %}"
+        id="form"
+        method="POST"
+        class="container"
+        enctype="multipart/form-data"
+      >
+        {% csrf_token %}
         <div class="row">
           <div class="col-lg-6 form-field">
             <div class="input-div">
               <div>
-
                 <h5 for="name" class="label">Username</h5>
                 <input
                   type="text"
@@ -106,11 +118,11 @@
           <div class="col-lg-6 form-field">
             <div class="select-div">
               <div>
-                  <select class="select" name="des">
-                    <option value="">Post</option>
-                    <option value="Admin">Admin</option>
-                    <option value="Content Writer">Content Writer</option>
-                  </select>
+                <select class="select" name="des">
+                  <option value="">Post</option>
+                  <option value="Admin">Admin</option>
+                  <option value="Content Writer">Content Writer</option>
+                </select>
               </div>
             </div>
           </div>
@@ -129,28 +141,36 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-lg-12 form-field">
             <div class="input-div add-image">
               <div>
                 <input type="file" name="image" id="file" />
-                <label for="file" id="selector" class="upload"><i class="fas fa-upload"></i> Add Your Image</label>
+                <label for="file" id="selector" class="upload"
+                  ><i class="fas fa-upload"></i> Add Your Image</label
+                >
               </div>
             </div>
           </div>
-          
+
           <div class="form-field col-lg-12">
             <input type="submit" name="submit" class="btn" value="register" />
           </div>
-          
+
           <div class="form-field col-lg-12 home-btn">
             <a href="/user/{{ id }}">Back to Home </a>
-            <form action="{% url 'registration' %}" method="POST">{% csrf_token %}
+            <form action="{% url 'registration' %}" method="POST">
+              {% csrf_token %}
               <input type="hidden" name="_method" value="temp" />
-              <!-- add input here -->
+
+              <input
+                type="submit"
+                value="Get Temporary Link"
+                name="temporary-link"
+                class="temporary-link"
+              />
             </form>
           </div>
-          
         </div>
       </form>
     </section>
